--- a/document_api/.gitignore
+++ b/document_api/.gitignore
@@ -1,1 +1,20 @@
 *.pyc
+*.pdf
+*.docx
+mdeia/
+media/documents/
+media/documents/modified/
+.media
+.media/documents/
+.media/documents/modified/
+__pycache__/
+instance/   
+.env
+venv/
+.envrc
+.idea/
+.vscode/
+.DS_Store
+mypy_cache/
+.pytest_cache/
+.coverage
